--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
+  "printWidth": 70,
   "tabWidth": 2,
-  "useTabs": false,
-  "singleQuote": true
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all"
 }
